# ChangeLog for sys-devel/automake
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/automake/ChangeLog,v 1.45 2004/03/23 23:07:12 weeve Exp $

  23 Mar 2004; Jason Wever <weeve@gentoo.org> automake-1.8.2.ebuild:
  Stable on sparc.

  19 Feb 2004; <tuxus@gentoo.org> automake-1.7.7.ebuild:
  Marked stable on mips

*automake-1.8.2 (03 Feb 2004)

  03 Feb 2004; Martin Schlemmer <azarah@gentoo.org> automake-1.8.2.ebuild,
  files/am-wrapper.pl-1.8, files/automake-1.8.2-infopage-namechange.patch,
  files/automake-1.7.9-infopage-namechange.patch:
  Update version.  Also update 1.7 versions to 1.7.9.  I should really try to
  figure out if we can drop some versions, as it is starting to get a bit much.

  17 Jan 2004; Christian Birchinger <joker@gentoo.org> automake-1.7.7.ebuild:
  Added sparc stable keyword

  13 Dec 2003; Brad House <brad_mssw@gentoo.org> automake-1.7.8.ebuild:
  mark stable on amd64

  24 Nov 2003; Brad House <brad_mssw@gentoo.org> automake-1.7.7.ebuild:
  someone bumped up the coreutils deps, but
  didn't bump up all deps for different arches.  Please let me know if
  marking this stable on amd64 causes any problems.

  21 Nov 2003; Aron Griffis <agriffis@gentoo.org> automake-1.7.8.ebuild:
  Stable on ia64 and alpha in support of coreutils DEPEND

  20 Nov 2003; Bartosch Pixa <darkspecter@gentoo.org> automake-1.7.8.ebuild:
  set ppc in keywords

*automake-1.7.8 (26 Oct 2003)

  26 Oct 2003; Daniel Ahlberg <aliz@gentoo.org> automake-1.7.8.ebuild:
  Version bump

*automake-1.7.7 (28 Sep 2003)

  28 Sep 2003; Martin Schlemmer <azarah@gentoo.org> automake-1.7.7.ebuild,
  files/automake-1.7.7-infopage-namechange.patch:
  Update version.

  17 Sep 2003; Jon Portnoy <avenj@gentoo.org> automake-1.7.5-r2.ebuild :
  ia64 keywords.

  02 Sep 2003; Martin Holzer <mholzer@gentoo.org> automake-1.6.1-r6.ebuild,
  automake-1.6.3.ebuild, automake-1.7.2.ebuild, automake-1.7.5-r2.ebuild: