@@ -1,4 +1,4 @@
-MD5 876a75e4abee00bbf9ab836e900d75b0 ChangeLog 7868
+MD5 cdf8678d5a96edd234ed3be61e550c49 ChangeLog 8053
 MD5 a0fb02c0fae4db3b42655b4ef3107409 automake-1.6.1-r6.ebuild 7888
 MD5 f312e2d0bb13bdd8fa94895bf1983a24 automake-1.6.3.ebuild 8622
 MD5 601b7353b670e74b71861fece6858537 automake-1.7.2.ebuild 10522
@@ -7,6 +7,7 @@ MD5 7f1beee0d0dc42c63be04f4d3e9b1e8e automake-1.7.7.ebuild 10551
 MD5 d5968b682665a6c988cfe2ba210dad61 automake-1.7.8.ebuild 10557
 MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
 MD5 1ef60e39199a988af88594a0ace79dcc automake-1.8.2.ebuild 12393
+MD5 13a3c431bbc7972fe4f4f3dfb4a2f68c automake-1.8.3.ebuild 12402
 MD5 0aceb83a953ea5fb93e7dfbca4055e07 files/am-wrapper.pl-1.5 1599
 MD5 50b9b3413db5942659f7ec0bf5fc1cb5 files/am-wrapper.pl-1.6 2735
 MD5 d17e61bff6e2fcbcc019892df9504afd files/am-wrapper.pl-1.7 5233
@@ -14,15 +15,16 @@ MD5 41ad4c592f0cb2cbc83ff461fc36eea9 files/automake-1.4_p5-ignore-duplicates.pat
 MD5 fbf3743bc8590dcb5bd34c675cb9d9f0 files/automake-1.5-target_hook.patch 1132
 MD5 efeb425eb64e48fb408abbb521c13be0 files/automake-1.7.2-infopage-namechange.patch 507
 MD5 e93136e02eb000c938f564484d306d76 files/automake-1.7.5-infopage-namechange.patch 592
-MD5 e93136e02eb000c938f564484d306d76 files/automake-1.7.7-infopage-namechange.patch 592
-MD5 e93136e02eb000c938f564484d306d76 files/automake-1.7.8-infopage-namechange.patch 592
 MD5 14581f79becf382f8dadeacb3f617356 files/digest-automake-1.6.1-r6 198
 MD5 edda410a5e7d1a809f7bd679289c7a5f files/digest-automake-1.6.3 198
 MD5 d9fa713e36ec2111a2fa03c0d6644f5b files/digest-automake-1.7.2 265
 MD5 6f85249cd60cd57baa49f351b058be56 files/digest-automake-1.7.5-r2 265
+MD5 e93136e02eb000c938f564484d306d76 files/automake-1.7.7-infopage-namechange.patch 592
 MD5 499f34d60d911cb54caa2232ad4e4e4b files/digest-automake-1.7.7 265
+MD5 e93136e02eb000c938f564484d306d76 files/automake-1.7.8-infopage-namechange.patch 592
 MD5 8323d1ae3957342232c30ee2a26ba556 files/digest-automake-1.7.8 265
 MD5 a354af1de0e1321fb5b8fdc0e5fa9c45 files/am-wrapper.pl-1.8 6246
 MD5 e93136e02eb000c938f564484d306d76 files/automake-1.7.9-infopage-namechange.patch 592
 MD5 9587f00ace066c11b5c22d72afe630a9 files/automake-1.8.2-infopage-namechange.patch 1131
 MD5 66a380a53b5136769e9adc454269c6b1 files/digest-automake-1.8.2 332
+MD5 d455e078ac4502784651e0fed838858e files/digest-automake-1.8.3 332
