@@ -1,0 +1,5 @@
+MD5 5e8a685a304c0def671decdfe453a631 automake-1.8.3.tar.bz2 658156
+MD5 571fd0b0598eb2a27dcf68adcfddfacb automake-1.7.9.tar.bz2 577705
+MD5 2e8053609e9d318f80db0fce29dca7e9 automake-1.6.3.tar.bz2 476275
+MD5 74a22ac0581378e807ecb334a55c5bab automake-1.5.tar.gz 526934
+MD5 24872b81b95d78d05834c39af2cfcf05 automake-1.4-p6.tar.gz 375060
