@@ -1,6 +1,12 @@
 # ChangeLog for sys-devel/automake
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/automake/ChangeLog,v 1.45 2004/03/23 23:07:12 weeve Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/automake/ChangeLog,v 1.46 2004/03/25 02:17:53 solar Exp $
+
+*automake-1.8.3 (24 Mar 2004)
+
+  24 Mar 2004; <solar@gentoo.org> automake-1.8.3.ebuild:
+  Version bump. Insecure Temporary Directory Creation Symbolic Link
+  Vulnerability. bug #45646
 
   23 Mar 2004; Jason Wever <weeve@gentoo.org> automake-1.8.2.ebuild:
   Stable on sparc.
